--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <!--  Might be obsolete?  -->
@@ -27,7 +28,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HueColors.SplashScreen">
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/Theme.HueColors.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
